--- a/requirements.txt
+++ b/requirements.txt
@@ -4,26 +4,25 @@ blinker==1.7.0
 cffi==1.16.0
 click==8.1.7
 cryptography==42.0.5
-Flask==3.0.2
+Flask==3.0.3
 Flask-Cors==4.0.0
-Flask-JWT
-Flask-JWT-Extended
+Flask-JWT==0.2.0
+Flask-JWT-Extended==4.6.0
 Flask-Migrate==4.0.7
 Flask-RESTful==0.3.10
 Flask-SQLAlchemy==3.1.1
 greenlet==3.0.3
 itsdangerous==2.1.2
 Jinja2==3.1.3
-jwt
+jwt==1.3.1
 Mako==1.3.2
 MarkupSafe==2.1.5
 passlib==1.7.4
 phonenumbers==8.13.34
 pycparser==2.22
-PyJWT>
+PyJWT==2.0.1
 pytz==2024.1
 six==1.16.0
 SQLAlchemy==2.0.29
 typing_extensions==4.11.0
 Werkzeug==3.0.2
-
